# keyway

./: .gitignore  Cargo.toml  README.md  TODO.md  config_window.html  index.html  key_window.html  package.json  tailwind.config.js  vite.config.ts
_src/: Cargo.toml  keyreceiver.rs  keysender.rs  keyway.rs  systemfont.rs
src/: App.tsx  config_window.css  config_window.tsx  hid.rs  key_window.css  key_window.tsx  keyreceiver.rs  keysender.rs  keyserver.rs  keyway.rs  main.rs  parameter.tsx  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: keyreceiver.rs  keysender.rs  keyway.rs  main.rs
src-tauri/src/keysender/: linux.rs  windows.rs
src/ConfigWindow/: index.tsx
src/KeyWindow/: index.tsx
src/keysender/: linux.rs  windows.rs
