[package]
name = "keyway"
version = "0.1.0"
edition = "2021"
authours = ["tkcd"]

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
evdev = "0.12.2"
iced = { version = "0.12.1", features = ["multi-window"] }
mio = { version = "1.0.0", features = ["os-ext", "os-poll", "net"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
udev = "0.9.0"
xkbcommon = "0.7.0"
